adding link references and more:

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -22,11 +22,13 @@
               </h1>
               <p class="lead  text-white">Leveraging software, AI, and analytics to raise graduation rates and student success</p>
               <div class="btn-wrapper">
+                <!--
                 <a href="https://demos.creative-tim.com/argon-design-system-angular/documentation/alerts?ref=adsa-landing-page" class="btn btn-info btn-icon mb-3 mb-sm-0">
                   <span class="btn-inner--icon"><i class="fa fa-code"></i></span>
                   <span class="btn-inner--text">Product</span>
                 </a>
-                <a href="https://www.creative-tim.com/product/argon-design-system-angular?ref=adsa-landing-page" class="btn btn-white btn-icon mb-3 mb-sm-0">
+                -->
+                <a href="http://www.advisingai-main.appspot.com/semester/" class="btn btn-white btn-icon mb-3 mb-sm-0">
                   <span class="btn-inner--icon"><i class="ni ni-button-power"></i></span>
                   <span class="btn-inner--text">Launch</span>
                 </a>
@@ -67,7 +69,7 @@
                     <span class="badge badge-pill badge-primary">ng-bootstrap</span>
                     <span class="badge badge-pill badge-primary">creative</span>
                   </div>
-                  <a href="javascript:void(0)" class="btn btn-secondary mt-4">Learn more</a>
+                  <a href="http://www.advisingai-main.appspot.com/semester/" class="btn btn-secondary mt-4">Learn more</a>
                 </div>
               </div>
             </div>
@@ -84,7 +86,7 @@
                     <span class="badge badge-pill badge-primary">vision</span>
                     <span class="badge badge-pill badge-primary">success</span>
                   </div>
-                  <a href="javascript:void(0)" class="btn btn-secondary mt-4">Learn more</a>
+                  <a href="http://www.advisingai-main.appspot.com/semester/" class="btn btn-secondary mt-4">Learn more</a>
                 </div>
               </div>
             </div>
@@ -101,7 +103,7 @@
                     <span class="badge badge-pill badge-primary">product</span>
                     <span class="badge badge-pill badge-primary">launch</span>
                   </div>
-                  <a href="javascript:void(0)" class="btn btn-secondary mt-4">Learn more</a>
+                  <a href="http://www.advisingai-main.appspot.com/semester/" class="btn btn-secondary mt-4">Learn more</a>
                 </div>
               </div>
             </div>
@@ -329,7 +331,7 @@
               <p class="lead text-white mt-3">Build your long term degree plan while also exploring all the other opportunities availible at your school</p>
             </div>
             <div class="col-lg-3 ml-lg-auto">
-              <a href="https://www.creative-tim.com/product/argon-design-system-angular?ref=adsa-landing-page" class="btn btn-lg btn-block btn-white text-primary">Launch Product</a>
+              <a href="http://www.advisingai-main.appspot.com/semester/" class="btn btn-lg btn-block btn-white text-primary">Launch Product</a>
             </div>
           </div>
         </div>
