--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -54,14 +54,16 @@
         <ul class="nav nav-footer justify-content-end text-white">
           <div class="copyright">
           &copy; {{test | date: 'yyyy'}}
-          <a href="https://www.advisingai,com" class="text-white" target="_blank">AdvisingAI</a>
+          <a href="https://www.advisingai.com" class="text-white" target="_blank">AdvisingAI</a>
         </div>
           <li class="nav-item">
-            <a href="https://www.creative-tim.com/presentation?ref=adsa-footer" class="pl-2 text-white" target="_blank">About Us</a>
+            <a href="https://www.linkedin.com/company/advisingai/" class="pl-2 text-white" target="_blank">LinkedIn</a>
           </li>
+          <!--
           <li class="nav-item">
             <a href="http://blog.creative-tim.com?ref=adsa-footer" class="pl-2 text-white" target="_blank">Blog</a>
           </li>
+          -->
         </ul>
       </div>
     </div>
