--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -24,7 +24,9 @@
           </div>
         </div>
       </div>
+
       <ul class="navbar-nav navbar-nav-hover align-items-lg-center">
+        <!--
         <li class="nav-item dropdown">
           <a class="nav-link no-caret" data-toggle="dropdown" role="button">
             <i class="ni ni-ui-04 d-lg-none"></i>
@@ -62,6 +64,7 @@
             </div>
           </div>
         </li>
+        
         <li class="nav-item dropdown">
           <a class="nav-link no-caret" data-toggle="dropdown" role="button">
             <i class="ni ni-collection d-lg-none"></i>
@@ -74,20 +77,25 @@
             <a [routerLink]="['/register']" class="dropdown-item">Register</a>
           </div>
         </li>
+        -->
       </ul>
+      
       <ul class="navbar-nav align-items-lg-center ml-lg-auto">
+        <!--
         <li class="nav-item">
           <a class="nav-link nav-link-icon" href="https://www.facebook.com/creativetim" target="_blank" data-toggle="tooltip" title="Like us on Facebook">
             <i class="fa fa-facebook-square"></i>
             <span class="nav-link-inner--text d-lg-none">Facebook</span>
           </a>
         </li>
+        -->
         <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="https://www.instagram.com/creativetimofficial" target="_blank" data-toggle="tooltip" title="Follow us on Instagram">
-            <i class="fa fa-instagram"></i>
-            <span class="nav-link-inner--text d-lg-none">Instagram</span>
+          <a class="nav-link nav-link-icon" href="https://www.linkedin.com/company/advisingai/" target="_blank" data-toggle="tooltip" title="Follow us on Instagram">
+            <i class="fa fa-linkedin"></i>
+            <span class="nav-link-inner--text d-lg-none">LinkedIn</span>
           </a>
         </li>
+        <!--
         <li class="nav-item">
           <a class="nav-link nav-link-icon" href="https://twitter.com/creativetim" target="_blank" data-toggle="tooltip" title="Follow us on Twitter">
             <i class="fa fa-twitter-square"></i>
@@ -100,6 +108,7 @@
             <span class="nav-link-inner--text d-lg-none">Github</span>
           </a>
         </li>
+        -->
         <li class="nav-item d-none d-lg-block ml-lg-4">
           <a href="https://www.creative-tim.com/product/argon-design-system-angular?ref=adsa-navbar" target="_blank" class="btn btn-neutral btn-icon">
             <span class="btn-inner--icon">
@@ -107,7 +116,7 @@
             </span>
             <span class="nav-link-inner--text">Launch Product</span>
           </a>
-        </li>
+        </li>   
       </ul>
     </div>
   </div>
