fixing date function

--- a/src/app/sections/angular-section/angular-section.component.html
+++ b/src/app/sections/angular-section/angular-section.component.html
@@ -130,7 +130,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text"><i class="ni ni-calendar-grid-58"></i></span>
           </div>
-          <input class="form-control datepicker" placeholder="Select date" name="dp" [(ngModel)]="model1" ngbDatepicker #d="ngbDatepicker" (click)="d.toggle()" (focus)="focus2=true" (blur)="focus2=false" type="text" (select)="onDateSelection($event)" autocomplete="off"/>
+          <input class="form-control datepicker" placeholder="Select date" name="dp" [(ngModel)]="model1" ngbDatepicker #d="ngbDatepicker" (click)="d.toggle()" (focus)="focus2=true" (blur)="focus2=false" type="text" autocomplete="off"/>
         </div>
       </div>
     </div>
