changing file references

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -36,7 +36,7 @@
             </div>
             
             <div class="col-lg-6 text-center mt-0 pt-0">
-              <img src="../../assets/img/brand/aai-brain-only-white.png" class="img-fluid floating" style="max-width: 65%">
+              <img src="/assets/img/brand/aai-brain-only-white.png" class="img-fluid floating" style="max-width: 65%">
             </div>
            
           </div>
@@ -60,7 +60,7 @@
               <div class="card card-lift--hover shadow border-0">
                 <div class="card-body py-5">
                   <div class="mb-2">
-                    <img src="../../assets/img/brand/aai-icon.png" class="img-fluid d-inline" style="max-width: 20%">
+                    <img src="assets/img/brand/aai-icon.png" class="img-fluid d-inline" style="max-width: 20%">
                     <h6 class="text-primary text-uppercase ml-3" style="display:inline;">Instant</h6>
                   </div>
                   <p class="description mt-3">What took weeks now takes seconds. Create four year plans instantly. Automatically see your progress toward any major at the university. Keep track of progress and build long term relationships. </p>
@@ -77,7 +77,7 @@
               <div class="card card-lift--hover shadow border-0">
                 <div class="card-body py-5">
                   <div class="mb-2">
-                    <img src="../../assets/img/brand/aai-icon.png" class="img-fluid d-inline" style="max-width: 20%">
+                    <img src="assets/img/brand/aai-icon.png" class="img-fluid d-inline" style="max-width: 20%">
                     <h6 class="text-primary text-uppercase ml-3" style="display:inline;">Individualized</h6>
                   </div>
                   <p class="description mt-3">Ditch the templates. Enjoy fully custom four year plans, degree flow charts, for any combination of majors or minors accross your university. AdvisingAI provides truly individualized degree programs.</p>
@@ -94,7 +94,7 @@
               <div class="card card-lift--hover shadow border-0">
                 <div class="card-body py-5">
                   <div class="mb-2">
-                    <img src="../../assets/img/brand/aai-icon.png" class="img-fluid d-inline" style="max-width: 20%">
+                    <img src="assets/img/brand/aai-icon.png" class="img-fluid d-inline" style="max-width: 20%">
                     <h6 class="text-primary text-uppercase ml-3" style="display:inline;">Asyncronous</h6>
                   </div>
                   <p class="description mt-3">No need to wait for appointments. Students can use the prooduct anytime and anywhere. Advisors are notified of the updates and have complete asynchronous control. </p>
@@ -117,12 +117,12 @@
     <div class="container">
       <div class="row row-grid align-items-center">
         <div class="col-md-6 order-md-2">
-          <img src="../../assets/img/brand/pages.png" class="img-fluid floating">
+          <img src="assets/img/brand/pages.png" class="img-fluid floating">
         </div>
         <div class="col-md-6 order-md-1">
           <div class="pr-md-5">
             <div class="pb-5">
-              <img src="../../assets/img/brand/logo_horizontal_color.png" class="img-fluid floating">
+              <img src="assets/img/brand/logo_horizontal_color.png" class="img-fluid floating">
             </div>
             <h3 style="font-size:170%" class="text-secondary">Modern tools for modern students</h3>
             <p>AdvisingAI has tools designed for today's student. We focus on exploration and account for all the roadblocks today's students encounter: 80% of students change their major, 40% double major or add minors, and 40% delay graduation </p>
@@ -173,7 +173,7 @@
     <div class="container">
       <div class="row row-grid align-items-center">
         <div class="col-md-5 order-md-1">
-          <img src="../../assets/img/brand/clouds.png" class="img-fluid floating">
+          <img src="assets/img/brand/clouds.png" class="img-fluid floating">
         </div>
         <div class="col-md-1 order-md-2">
         </div>
